# Samraksh

./: README.md  docker-compose.yml
backend/: .env  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/server/: app.py
backend/server/data/: detection_meta.py
backend/server/detectors/: person_body.py  weapon.py
backend/server/routes/: app_data.py  stream_video.py  websockets.py
frontend/: .eslintrc.cjs  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/video-stream/: _index.jsx  index.jsx
frontend/src/components/video-upload/: index.jsx
frontend/src/context/: app-context-provider.jsx
frontend/src/context/app-provider/: index.jsx
frontend/src/page/video-stream/: index.jsx
